mode supportUrkaine to shopping list and fix loader

--- a/src/sass/base/shopingListPage/_ShoppingList.scss
+++ b/src/sass/base/shopingListPage/_ShoppingList.scss
@@ -1,6 +1,12 @@
 .shopping-list {
   margin-top: 40px;
   font-family: 'DM Sans';
+  width: 100%;
+
+  @media screen and (min-width: 1440px) {
+      margin-top: 0;
+    }
+
   &__container {
     margin-top: 40px;
   }
@@ -259,5 +265,27 @@
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: -0.04em;
+  }
+}
+
+
+
+// desctop position
+.shopping-page-flex-thumb {
+
+  // display: flex;
+  @media screen and (min-width: 1440px) {
+    display: flex;
+    margin-top: 40px;
+    gap: 40px;
+  }
+}
+
+.shoppin-list-hide-support {
+  display: none;
+
+  @media screen and (min-width: 1440px) {
+    display: block;
+    width: 356px;
   }
 }
