--- a/src/sass/base/main-page/_loader.scss
+++ b/src/sass/base/main-page/_loader.scss
@@ -25,10 +25,12 @@ $delay : calc($duration/6);
         right: 60px;
     }
 
-    @media screen and (min-width: 1440px) {
-        transform: scale(0.6);
-        right: 80px;
-    }
+          @media screen and (min-width: 1440px) {
+              position: absolute;
+              bottom: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%) scale(1.5);
+          }
 
 }
 
