--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -51,6 +51,8 @@
 		--default-secondary-color: #111111;
 	  
 		--user-bg: #f6f6f6;
+		--secondary-text-color: rgba(17, 17, 17, 0.6);
+		--test-secondary-text-color-darkt: rgba(255, 255, 255, 0.6);
 }
 
 // ---------------------BREAKPOINTS---------------------
