--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,7 @@
 @import "./base/reset";
 @import "./abstracts/vars";
 @import "./base/common";
+@import "./abstracts/darkTheme";
 @import "./base/fonts";
 @import "./abstracts/mixins";
 @import "./abstracts/placeholders";
