--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -15,7 +15,9 @@
           <a class="page-nav__link" href="./index.html">Home</a>
         </li>
         <li>
-          <a class="page-nav__link" href="./ShoppingPage.html"
+          <a
+            class="page-nav__link js-counter-wishlist"
+            href="./ShoppingPage.html"
             >Shopping list
             <svg class="page-nav__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-shopping-list"></use>
@@ -26,14 +28,23 @@
       </ul>
     </nav>
 
-    <label class="switcher-theme" aria-label="theme switcher">
+    <!-- <label class="switcher-theme" aria-label="theme switcher">
       <input
         type="checkbox"
         class="switcher-theme__checkbox visually-hidden js-switcher-theme"
-      />
+      /> -->
 
-      <span class="switcher-theme__status"></span>
-    </label>
+    <div class="switcher-thumb">
+      <input type="checkbox" class="checkbox" id="checkbox" />
+      <label for="checkbox" class="checkbox-label">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+        <span class="ball"></span>
+      </label>
+    </div>
+
+    <!-- <span class="switcher-theme__status"></span>
+    </label> -->
 
     <div class="page-header__user-container auth-component">
       <button class="user js-user" type="button">
@@ -145,7 +156,10 @@
       Log out
     </button>
 
-    <button class="header-btn sign-up-btn js-open-form-modal sign-up-btn-openModal" type="button">
+    <button
+      class="header-btn sign-up-btn js-open-form-modal sign-up-btn-openModal"
+      type="button"
+    >
       Sign up
     </button>
   </div>
