--- a/src/sass/layout/_categories.scss
+++ b/src/sass/layout/_categories.scss
@@ -5,7 +5,11 @@
     overflow-y: auto;
     @media screen and (min-width: 768px) {
             height: 472px;
+            
         }
+                @media screen and (min-width: 1440px) {
+                    width: 356px;
+                }
 }
 
 .list-categories {
