--- a/src/sass/base/shopingListPage/_ShoppingList.scss
+++ b/src/sass/base/shopingListPage/_ShoppingList.scss
@@ -1,291 +1,302 @@
 .shopping-list {
-  margin-top: 40px;
-  font-family: 'DM Sans';
-  width: 100%;
+	margin-top: 40px;
+	font-family: "DM Sans";
+	width: 100%;
 
-  @media screen and (min-width: 1440px) {
-      margin-top: 0;
-    }
+	@media screen and (min-width: 1440px) {
+		margin-top: 0;
+	}
 
-  &__container {
-    margin-top: 40px;
-  }
+	&__container {
+		margin-top: 40px;
+	}
 
-  &__title {
-    width: 193px;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 1.19;
-    letter-spacing: -0.04em;
-    margin-bottom: 40px;
-    margin-left: 20px;
-    color: #111111;
+	&__title {
+		width: 193px;
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 1.19;
+		letter-spacing: -0.04em;
+		margin-bottom: 40px;
+		margin-left: 20px;
+		color: #111111;
 
-    @media screen and (min-width: 768px) {
-      font-size: 48px;
-      line-height: 1.08;
-      display: inline;
-    }
-  }
+		@media screen and (min-width: 768px) {
+			font-size: 48px;
+			line-height: 1.08;
+			display: inline;
+		}
+	}
 
-  &__title-span {
-    color: #4f2ee8;
-    display: inline;
-  }
-
-  
+	&__title-span {
+		color: #4f2ee8;
+		display: inline;
+	}
 }
 .shopping-list__empty-image {
-  background-image: url(../images/shoppinglist/booksMobile.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  width: 265px;
-  height: 198px;
+	background-image: url(../images/shoppinglist/booksMobile.png);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	width: 265px;
+	height: 198px;
 }
-@media (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .shopping-list__empty-image {
-    background-image: url(../images/shoppinglist/booksMobile@2x.png);
-    background-size: 265px 198px;
-  }
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+	.shopping-list__empty-image {
+		background-image: url(../images/shoppinglist/booksMobile@2x.png);
+		background-size: 265px 198px;
+	}
 }
 
 .shopping-list__empty-image {
-  background-image: url(../images/shoppinglist/booksTablet.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  width: 322px;
-  height: 241px;
+	background-image: url(../images/shoppinglist/booksTablet.png);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	width: 322px;
+	height: 241px;
 }
-@media (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .shopping-list__empty-image {
-    background-image: url(../images/shoppinglist/booksTablet@2x.png);
-    background-size: 322px 241px;
-  }
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+	.shopping-list__empty-image {
+		background-image: url(../images/shoppinglist/booksTablet@2x.png);
+		background-size: 322px 241px;
+	}
 }
-
+.shoplist-desc-container {
+	width: 100%;
+}
 .shopping-list__empty-page {
-  margin-top: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	margin-top: 120px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .shopping-list__empty-text {
-  margin-bottom: 14px;
-  font-family: 'DM Sans';
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.29;
-  text-align: center;
-  letter-spacing: -0.02em;
-  color: rgba(0, 0, 0, 0.6);
+	margin-bottom: 14px;
+	font-family: "DM Sans";
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.29;
+	text-align: center;
+	letter-spacing: -0.02em;
+	color: rgba(0, 0, 0, 0.6);
 }
 
 .shoplist-trash {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  margin-top: 24px;
-  margin-right: 24px;
-  width: 34px;
-  height: 34px;
-  background-image: url(../images/svg/trash.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 50%;
-  background-color: #4f2ee8;
-  border-radius: 100%;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 1;
+	margin-top: 14px;
+	margin-right: 14px;
+	width: 28px;
+	height: 28px;
+	background-image: url(../images/svg/trash.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	background-color: #4f2ee8;
+	border-radius: 100%;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+	@media screen and (min-width: 768px) {
+		margin-top: 24px;
+		margin-right: 24px;
+		width: 34px;
+		height: 34px;
+	}
 }
 
 .shoplist-icon-amazon {
-  background-image: url(../images/shoppinglist/amazon.png);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  width: 32px;
-  height: 11px;
+	background-image: url(../images/shoppinglist/amazon.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	width: 32px;
+	height: 11px;
 }
 
 .shoplist-icon-ibook {
-  background-image: url(../images/shoppinglist/ibook.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-  width: 16px;
-  height: 16px;
+	background-image: url(../images/shoppinglist/ibook.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+	width: 16px;
+	height: 16px;
 }
 
 .shoplist-icon-bookshop {
-  background-image: url(../images/shoppinglist/bookshop.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-  width: 16px;
-  height: 16px;
-  right: 14;
+	background-image: url(../images/shoppinglist/bookshop.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 100%;
+	width: 16px;
+	height: 16px;
+	right: 14;
 }
 
 .shoplist-icons {
-  position: absolute;
-  bottom: 14;
-  right: 62;
-  width: 80px;
-  height: 16px;
-  margin-bottom: 10px;
-  margin-right: 14px;
-  @media screen and (min-width: 768px) {
-    bottom: 24;
-    right: 56;
-  }
+	position: absolute;
+	bottom: 14;
+	right: 43;
+	width: 80px;
+	height: 16px;
+	margin-bottom: 10px;
+	margin-right: 14px;
+	@media screen and (min-width: 768px) {
+		bottom: 24;
+		right: 56;
+	}
 }
 
 .shoplist-icons-list {
-  gap: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  list-style: none;
+	gap: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	list-style: none;
 }
 
 .shoplist-book-container {
-  width: 996px;
-  height: 213px;
-  position: relative;
-  margin-bottom: 20px;
-  display: flex;
-  width: 335px;
-  height: 170px;
-  border: 2px solid rgba(79, 46, 232, 0.4);
-  border-radius: 16px;
+	width: 996px;
+	height: 213px;
+	position: relative;
+	margin-bottom: 20px;
+	display: flex;
+	width: 335px;
+	height: 170px;
+	border: 2px solid rgba(79, 46, 232, 0.4);
+	border-radius: 16px;
 
-  @media screen and (min-width: 768px) {
-    position: relative;
-    margin-bottom: 20px;
-    display: flex;
-    width: 704px;
-    height: 213px;
-    border: 2px solid rgba(79, 46, 232, 0.4);
-    border-radius: 16px;
-  }
-  @media screen and (min-width: 1440px) {
-    width: 996px;
-    height: 213px;
-  }
+	@media screen and (min-width: 768px) {
+		position: relative;
+		margin-bottom: 20px;
+		display: flex;
+		width: 704px;
+		height: 213px;
+		border: 2px solid rgba(79, 46, 232, 0.4);
+		border-radius: 16px;
+	}
+	@media screen and (min-width: 1440px) {
+		width: 996px;
+		height: 213px;
+	}
 }
 
 .shoplist-book-img {
-  margin: 14px;
-  width: 100px;
-  height: 142px;
-  border-radius: 8px;
-  background-color: inherit;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 32px 30px;
-  @media screen and (min-width: 768px) {
-    margin: 24px;
-    width: 116px;
-    height: 165px;
-    border-radius: 8px;
-    background-color: inherit;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 44px 40px;
-  }
+	margin: 14px;
+	width: 100px;
+	height: 142px;
+	border-radius: 8px;
+	background-color: inherit;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 32px 30px;
+	@media screen and (min-width: 768px) {
+		margin: 24px;
+		width: 116px;
+		height: 165px;
+		border-radius: 8px;
+		background-color: inherit;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 44px 40px;
+	}
 }
 
 .shoplist-book-title {
-  margin-top: 14px;
-  margin-bottom: 4px;
-  width: 144px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.12;
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-  color: #111111;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  margin-top: 24px;
-  margin-bottom: 4px;
-  height: 18px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.12;
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-  color: #111111;
+	width: 144px;
+	margin-top: 14px;
+	margin-bottom: 4px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.12;
+	letter-spacing: -0.04em;
+	text-transform: uppercase;
+	color: #111111;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	@media screen and (min-width: 768px) {
+		margin-top: 24px;
+		margin-bottom: 4px;
+		height: 18px;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 1.12;
+		letter-spacing: -0.04em;
+		text-transform: uppercase;
+		color: #111111;
+	}
 }
 
 .shoplist-book-genre {
-  margin-bottom: 8px;
-  height: 14px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  color: #b4afaf;
+	width: 165px;
+	margin-bottom: 8px;
+	height: 14px;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.03em;
+	color: #b4afaf;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .shoplist-book-description {
-  margin-bottom: 48px;
-  width: 508px;
-  color: #111111;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.29;
-  letter-spacing: -0.04em;
-  text-overflow: ellipsis;
+	width: 193px;
+	height: 68px;
+	margin-bottom: 14px;
+	color: #111111;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.29;
+	letter-spacing: -0.04em;
+	white-space: wrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .shoplist-book-author {
-  height: 14px;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: -0.04em;
-  color: #b4afaf;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 14px;
-    align-self: flex-end;
-    width: 97px;
+	width: 97px;
+	height: 14px;
+	font-style: italic;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: -0.04em;
+	color: #b4afaf;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	@media screen and (min-width: 768px) {
+		margin-bottom: 14px;
+		align-self: flex-end;
+		width: 97px;
 
-    font-style: italic;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: -0.04em;
-  }
+		font-style: italic;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 1.17;
+		letter-spacing: -0.04em;
+	}
 }
-
-
 
 // desctop position
 .shopping-page-flex-thumb {
-
-  // display: flex;
-  @media screen and (min-width: 1440px) {
-    display: flex;
-    margin-top: 40px;
-    gap: 40px;
-  }
+	// display: flex;
+	@media screen and (min-width: 1440px) {
+		display: flex;
+		margin-top: 40px;
+		gap: 40px;
+	}
 }
 
 .shoppin-list-hide-support {
-  display: none;
+	display: none;
 
-  @media screen and (min-width: 1440px) {
-    display: block;
-    width: 356px;
-  }
+	@media screen and (min-width: 1440px) {
+		display: block;
+		width: 356px;
+	}
 }
