--- a/src/sass/abstracts/_darkTheme.scss
+++ b/src/sass/abstracts/_darkTheme.scss
@@ -75,6 +75,24 @@
 .form__close{
     fill: var(--bg-light);
 }
+// loader
+.book_item{
+    background-color: var(--secondary-akzent);
+}
+// shopping list favourite books
+.shoplist-icons-li{
+    filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(76deg) brightness(107%) contrast(101%);
+}
+.shoplist-book-container{
+    background-color: var(--primary-dark);
+    color: var(--primary-light);
+}
+.shoplist-book-description{
+    color: var(--primary-light);
+}
+.shoplist-book-title{
+    color: var(--primary-light);
+}
 }
 
 
